bin_PROGRAMS = cdrwtool
cdrwtool_LDADD = $(top_builddir)/libudffs/libudffs.la
cdrwtool_SOURCES = main.c options.c cdrwtool.c defaults.c ../mkudffs/mkudffs.c options.h cdrwtool.h ../include/ecma_167.h ../include/osta_udf.h ../mkudffs/mkudffs.h ../include/libudffs.h ../include/defaults.h ../include/udf_endian.h

AM_CPPFLAGS = -D_LARGEFILE64_SOURCE
