bin_PROGRAMS = cdrwtool
cdrwtool_LDADD = $(top_builddir)/libudffs/libudffs.la
cdrwtool_SOURCES = main.c options.c cdrwtool.c ../mkudffs/mkudffs.c ../mkudffs/defaults.c ../mkudffs/file.c options.h cdrwtool.h ../include/ecma_167.h ../include/osta_udf.h ../mkudffs/mkudffs.h ../mkudffs/defaults.h ../mkudffs/file.h ../include/libudffs.h

AM_CPPFLAGS = -I$(top_srcdir)/include
