bin_PROGRAMS = mkudffs
mkudffs_LDADD = $(top_builddir)/libudffs/libudffs.la
mkudffs_SOURCES = main.c mkudffs.c defaults.c options.c mkudffs.h options.h ../include/ecma_167r3.h ../include/osta_udf201.h ../include/libudffs.h ../include/defaults.h ../include/udf_endian.h

AM_CPPFLAGS = -D_LARGEFILE64_SOURCE
